2006-11-15  Mike Cvet  <mcvet@redhat.com>

	* images/16/top.png: Added.
	* images/24/top.png: Added.
	* images/32/top.png: Added.
	* images/__MACOSX/16/._top.png: Added.
	* images/__MACOSX/24/._top.png: Added.
	* images/__MACOSX/32/._top.png: Added.
	
2006-11-14  Nurdin Premji <npremji@redhat.com>

	* tests/dogtail_scripts/.cvsignore: Added *.pyc.

2006-11-14  Andrew Cagney  <cagney@redhat.com>

	* test/GuiTestLib.java: Use frysk.junit.TestCase.
	* test/TestObserverSaveLoad.java: Ditto.
	* test/TestTagsetSaveLoad.java: Ditto.
	* test/TestActionManager.java: Ditto.
	* test/TestGlade.java: Ditto.
	* test/TestWindowFactorization.java: Ditto.
	* test/TestFilterManager.java: Ditto.
	* test/TestIconManager.java: Ditto.
	* test/TestSessionSaveLoad.java: Ditto.
	* test/TestPrototypeCopying.java: Ditto.

2006-11-06  Mike Cvet  <mcvet@redhat.com>

	* disassembler/DisassemblyWindow.java (rowAppend): Fixed to properly
	append rows more efficiently.
	(numInstructions): Added. Used to figure out how many instructions are
	displayed rather than using memory addressing offsets. Fixes #3461.
	(setUpColumns): Fixed to use numInstructions. Removed some useless 
	int values.
	(refreshList): Makes better use of available information to generate
	window information. Fixes #3461.
	(handleFromSpin): Fixed a scrolling bug.
	(handleToSpin): Ditto. Temporarily removed functionality for iterating 
	back "down" memory space from bottom of window pending more bugfixing.

2006-11-02  Mike Cvet  <mcvet@redhat.com>

	* glade/frysk_source.glade: Added stepDialog.

2006-10-27  Mike Cvet  <mcvet@redhat.com>

	* glade/frysk_source.glade: Added threadSelectionDialog.

2006-10-25  Andrew Cagney  <cagney@redhat.com>

	* test/TestRegionAndGCFailure.java: Move to
	frysk-gtk/tests/frysk3116.

2006-10-24  Phil Muldoon <pmuldoon@redhat.com>

	* test/TestRegionAndGCFailure.java: New File.

2006-10-16  Mike Cvet  <mcvet@redhat.com>

	* glade/disassemblywindow.glade: Resized.