@@ -1,3 +1,7 @@
+2006-11-15  Rick Moseley  <rmoseley@redhat.com>
+
+	* test/TestParser.java: New for testing parser output.
+
 2006-11-15  Mike Cvet  <mcvet@redhat.com>
 
 	* images/16/top.png: Added.
